<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">AppSmartFridge</string>
    <string name="action_settings">Settings</string>
    <string name="date_selected"></string>
    <string name="frigoPhoto">frigoPhoto</string>
    <string name="D">D</string>
    <string name="C">C</string>
    <string name="produitPhoto">produitPhoto</string>
    <string name="title_activity_prods">ActivityProds</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>

    <string name="radio_temp">Temperature</string>
    <string name="radio_decomp">Décomposition</string>
    <string name="radio_peremp">Péremption</string>
    <string name="radio_hygro">Hygrométrie</string>
    <string name="radio_porte">Porte</string>
    <string name="btn_valider">Valider</string>


</resources>
